--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cowboy Credits Market Depth - Stacker News</title>
+    <title>Stacker News Cowboy Credits VS Bitcoin Satoshi Market Depth</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.0/chart.umd.min.js"></script>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -22,7 +22,7 @@
         }
         .header h1 { 
             font-size: 1.75rem; 
-            color: #ffc107;
+            color: #fada3e;
             margin-bottom: 8px;
             font-weight: 600;
         }
@@ -34,7 +34,7 @@
             background: #232323;
             border-radius: 8px;
             padding: 30px;
-            margin-bottom: 30px;
+            margin-bottom: 20px;
             border: 1px solid #404040;
         }
         .chart-wrapper { position: relative; height: 400px; }
@@ -42,7 +42,7 @@
             background: #232323;
             border-radius: 8px;
             padding: 30px;
-            margin-bottom: 30px;
+            margin-bottom: 20px;
             border: 1px solid #404040;
             overflow-x: auto;
         }
@@ -81,7 +81,7 @@
             font-weight: 500;
         }
         .price-cell {
-            color: #ffc107;
+            color: #fada3e;
             font-weight: 600;
             font-size: 1rem;
         }
@@ -96,7 +96,7 @@
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
             gap: 20px;
-            margin-bottom: 30px;
+            margin-bottom: 20px;
         }
         .order-book {
             background: #232323;
@@ -122,7 +122,7 @@
         }
         .order-item:last-child { border-bottom: none; }
         .order-user { 
-            color: #ffc107;
+            color: #fada3e;
             text-decoration: none;
             font-weight: 500;
         }
@@ -140,7 +140,7 @@
             font-size: 0.85rem;
         }
         .source-link {
-            color: #ffc107;
+            color: #fada3e;
             text-decoration: none;
             font-size: 1rem;
             opacity: 0.7;
@@ -153,6 +153,7 @@
             background: #232323;
             border-radius: 8px;
             padding: 24px;
+            margin-bottom: 20px;
             border: 1px solid #404040;
         }
         .stats-grid {
@@ -173,52 +174,39 @@
             font-weight: 600;
         }
         .stat-bid { color: #4caf50; }
-        .stat-spread { color: #ffc107; }
+        .stat-spread { color: #fada3e; }
         .stat-ask { color: #f44336; }
-        .stat-price { color: #ffc107; }
+        .stat-price { color: #fada3e; }
         @media (max-width: 768px) {
             .stats-grid { grid-template-columns: 1fr; gap: 16px; }
             .orders-grid { grid-template-columns: 1fr; }
+        }
+
+        footer {
+            margin: 1rem;
+            padding: 1rem;
+            color: #787878;
+            text-align: center;
+        }
+
+        .header a,
+        footer a {
+            color: #bbbbbb;
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <h1>⚡ Cowboy Credits Market Depth</h1>
-            <p>Order book for CC/sats trading on Stacker News</p>
+            <h1>⚡ Stacker.News CC/SAT Exchange Order Book </h1>
+            <p>Order book for CC/sats trading on Stacker News - <a href="https://stacker.news/items/1329607/r/AGORA" target="_blank">Place your order</a>.</p>
         </div>
 
         <div class="chart-container">
             <div class="chart-wrapper">
                 <canvas id="depthChart"></canvas>
             </div>
-        </div>
-
-        <div class="orders-grid">
-            <div class="order-book buy-orders">
-                <h3>Buy Orders (Bids)</h3>
-                <div id="buyOrdersList"></div>
-            </div>
-
-            <div class="order-book sell-orders">
-                <h3>Sell Orders (Asks)</h3>
-                <div id="sellOrdersList"></div>
-            </div>
-        </div>
-
-        <div class="order-table-container">
-            <table class="order-table">
-                <thead>
-                    <tr>
-                        <th>BUY (CC)</th>
-                        <th>PRICE (SATS)</th>
-                        <th>SELL (CC)</th>
-                    </tr>
-                </thead>
-                <tbody id="orderTableBody">
-                </tbody>
-            </table>
         </div>
 
         <div class="stats-container">
@@ -241,19 +229,53 @@
                 </div>
             </div>
         </div>
+
+        <div class="orders-grid">
+            <div class="order-book buy-orders">
+                <h3>Buy Orders (Bids)</h3>
+                <div id="buyOrdersList"></div>
+            </div>
+
+            <div class="order-book sell-orders">
+                <h3>Sell Orders (Asks)</h3>
+                <div id="sellOrdersList"></div>
+            </div>
+        </div>
+
+        <div class="order-table-container">
+            <table class="order-table">
+                <thead>
+                    <tr>
+                        <th>Buy (CC)</th>
+                        <th>Price (SATS)</th>
+                        <th>Sell (CC)</th>
+                    </tr>
+                </thead>
+                <tbody id="orderTableBody">
+                </tbody>
+            </table>
+        </div>
+
+        <footer>
+            <p><small>⚡ Stacker.News Cowboy Credits VS Bitcoin Satoshi Exchange Order Book 
+                - <a href="https://github.com/4G0R4/cc-sat" target="_blank">Repository</a> 
+                - <a href="https://github.com/4G0R4/cc-sat/issues/new" target="_blank">Open a issue</a> 
+                - <a href="https://stacker.news/items/1329607/r/AGORA" target="_blank">Place your order</a>
+            </small></p>
+        </footer>
     </div>
 
     <script>
         var orders = [
+            { user: '@Darthcoin', type: 'buy', cc: 1, sats: 1, postId: '723069' },
+            { user: '@Darthcoin', type: 'sell', cc: 1, sats: 1, postId: '723069' },
             { user: '@SimpleStacker', type: 'buy', cc: 3, sats: 1.5, postId: '1323628' },
             { user: '@thebullishbitcoiner', type: 'sell', cc: 2, sats: 1, postId: '1323521' },
             { user: '@AGORA', type: 'buy', cc: 2, sats: 1.5, postId: '1323640' },
             { user: '@Undisciplined', type: 'buy', cc: 3, sats: 2, postId: '1323693' },
             { user: '@0xbitcoiner', type: 'buy', cc: 1, sats: 0.6, postId: '1323656' },
             { user: '@nokness', type: 'sell', cc: 19, sats: 16, postId: '944888' },
-            { user: '@ek', type: 'buy', cc: 100, sats: 1, postId: '837469' },
-            { user: '@Darthcoin', type: 'buy', cc: 1, sats: 1, postId: '723069' },
-            { user: '@Darthcoin', type: 'sell', cc: 1, sats: 1, postId: '723069' }
+            { user: '@ek', type: 'buy', cc: 100, sats: 1, postId: '837469' }            
         ];
 
         for (var i = 0; i < orders.length; i++) {
@@ -378,14 +400,14 @@
                                 type: 'line',
                                 xMin: actualPrice.toFixed(4),
                                 xMax: actualPrice.toFixed(4),
-                                borderColor: '#ffc107',
+                                borderColor: '#fada3e',
                                 borderWidth: 2,
                                 borderDash: [5, 5],
                                 label: {
                                     display: true,
                                     content: 'Actual Price',
                                     position: 'start',
-                                    backgroundColor: '#ffc107',
+                                    backgroundColor: '#fada3e',
                                     color: '#1c1c1c'
                                 }
                             }
@@ -510,7 +532,7 @@
         
         var spreadText = 'N/A';
         if (sellOrders.length > 0 && buyOrders.length > 0) {
-            var spreadValue = sellOrders[0].rate - buyOrders[0].rate;
+            var spreadValue =  buyOrders[0].rate - sellOrders[0].rate;
             var spreadPercent = ((spreadValue / buyOrders[0].rate) * 100).toFixed(2);
             spreadText = spreadValue.toFixed(4) + ' (' + spreadPercent + '%)';
         }
