Update Submit Order button to open a link

--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
         <div class="action-buttons">
             <button onclick="window.open('https://stacker.news/items/1349267/r/AGORA', '_blank')" class="btn-secondary">[-] Read SN Announcement</button>
             <button onclick="loadOrders()">[↻] Refresh Orders</button>
-            <button onclick="openModal('orderModal')">[↯] Submit Order via SN</button>
+            <button onclick="window.open('https://stacker.news/items/1349267/r/AGORA', '_blank')">[↯] Submit Order via SN</button>
             <button onclick="openModal('orderModal')">[&#726;] Submit Order via GH</button>
             <button onclick="openModal('settingsModal')" class="btn-secondary">[&#9965;] GH Settings</button>
         </div>
