--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>↯ Stacker.News CC/SAT Exchange Order Book</title>
+    <title>↯ Stacker.News CC→SAT Exchange Order Book</title>
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -401,7 +401,7 @@
 <body>
     <div class="container">
         <header>
-			<h1>↯ Stacker.News CC/SAT Exchange Order Book</h1>
+			<h1>↯ Stacker.News CC→SAT Exchange Order Book</h1>
             <div class="subtitle">Order book for Cowboy Credits (CC) ⇄ Satoshis (SAT) trading on Stacker News - Place your order below or comment in the <a href="https://stacker.news/items/1349267/r/AGORA" target="_blank">annoucement post</a>.</div>
         </header>
 
@@ -409,7 +409,7 @@
             <strong>⚠ Sybil Fees Notice</strong>
             Consider Stacker.News <a href="https://stacker.news/items/730254/r/AGORA" target="_blank">30% sybil fees</a> on transactions when placing orders. The effective rate is 1CC=1sats when buying CCs from Stacker.news/credits. 
             Territory founders currently receive 21% back when transacting on their territories, allowing them to offer better rates. Mouse over the &#9432 to read more details about each offer.
-            Data submitted and maintained by the SN community: click the × to permanently delete any obsolete offer.
+            Data submitted and maintained by the SN community: click the × to permanently delete any obsolete offer. Exchange price rates are expressed in 'sat per CC' (CC→SAT).
         </div>
 
         <div class="kpi-section">
@@ -510,7 +510,7 @@
                 </select>
             </div>
             <div class="form-group">
-                <label>Price (CC/SAT rate, e.g., 0.9 means 0.9 sats per CC):</label>
+                <label>Price (CC→SAT rate, e.g., 0.9 means 0.9 sats per CC):</label>
                 <input type="number" id="orderPrice" step="0.01" min="0.01" placeholder="0.85">
             </div>
             <div class="form-group">
@@ -794,7 +794,7 @@
                             type: 'linear',
                             title: {
                                 display: true,
-                                text: 'Price (CC/SAT)',
+                                text: 'Price (CC→SAT)',
                                 color: '#8b949e'
                             },
                             ticks: { color: '#8b949e' },
@@ -887,7 +887,7 @@
     </script>
 
         <footer>
-            <p><small>🄯 ↯ Stacker.News CC/SAT Exchange Order Book
+            <p><small>🄯 ↯ Stacker.News CC→SAT Exchange Order Book
                 - <a href="https://github.com/4G0R4/cc-sat" target="_blank">Repository</a> 
                 - <a href="https://github.com/4G0R4/cc-sat/issues/new" target="_blank">Open a issue</a> 
                 - <a href="https://stacker.news/items/1349267/r/AGORA" target="_blank">Place your order on SN</a> -
